--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AppCenter" version="2.4.0-preview" targetFramework="net472" />
+  <package id="Microsoft.AppCenter.Analytics" version="2.4.0-preview" targetFramework="net472" />
+  <package id="Microsoft.AppCenter.Crashes" version="2.4.0-preview" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net472" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="net472" />
